--- a/app/templates/admin/auth/login.html
+++ b/app/templates/admin/auth/login.html
@@ -99,9 +99,9 @@
         <div class="items-center p-8 row max-lg:px-1">
             <div class="col">
                 <a href="/" class="navbar-brand">
-                    <img src="/static/assets/img/logo/logo.svg" alt="Zhanor Admin"
+                    <img src="/static/assets/img/logo/logo.svg" alt="Carp Admin"
                         class="group-[.navbar-shrinked]/body:hidden dark:hidden">
-                    <img src="/static/assets/img/logo/logo-dark.svg" alt="Zhanor Admin"
+                    <img src="/static/assets/img/logo/logo-dark.svg" alt="Carp Admin"
                         class="hidden group-[.navbar-shrinked]/body:hidden dark:block">
                 </a>
             </div>
@@ -193,7 +193,7 @@
             </div>
             <div class="flex flex-col justify-center overflow-hidden bg-center bg-cover col-lg-6 max-lg:hidden"
                 style="background-image: url(/static/assets/images/bg/bg-auth.jpg)">
-                <img src="/static/assets/images/bg/dash-mockup.jpg" alt="Zhanor Admin Dashboard Mockup"
+                <img src="/static/assets/images/bg/dash-mockup.jpg" alt="Carp Admin Dashboard Mockup"
                     class="rounded-[36px] shadow-[0_24px_88px_rgba(0,0,0,0.55)] translate-x-[27%]">
             </div>
         </div>
