--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>ZhanorAdmin,基于flask的符合中国人习惯的管理后台</title>
+    <title>CarpAdmin,基于flask的符合中国人习惯的管理后台</title>
     <meta name="msapplication-TileColor" content="#066fd1" />
     <meta name="theme-color" content="#066fd1" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +14,7 @@
     <meta name="MobileOptimized" content="320" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
-    <meta name="description" content="zhanor-admin,基于flask的符合中国人习惯的管理后台" />
+    <meta name="description" content="carp-admin,基于flask的符合中国人习惯的管理后台" />
 
     <link href="/static/assets/libs/tabler/tabler.min.css?107" rel="stylesheet" />
     <link href="/static/assets/css/frontend.css?107" rel="stylesheet" />
