--- a/app/templates/admin/layout/app_without_sidebar.html
+++ b/app/templates/admin/layout/app_without_sidebar.html
@@ -33,7 +33,7 @@
       crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" href="{{ url_for('static', filename='assets/webfont/tabler-icons.min.css') }}"/>
    <link href="{{ url_for('static', filename='assets/css/common.css') }}?v={{ configs.basic.version }}" rel="stylesheet" />
-   <link href="{{ url_for('static', filename='assets/css/zhanor-admin.css') }}?v={{ configs.basic.version }}" rel="stylesheet" />
+   <link href="{{ url_for('static', filename='assets/css/carp-admin.css') }}?v={{ configs.basic.version }}" rel="stylesheet" />
 
 </head>
 
